--- a/index.html
+++ b/index.html
@@ -67,10 +67,21 @@
         <a class="front-size-md color-red" href="#">first link</a>
         <br>
         <a class="front-size-md color-green" href="#">second link</a>
-
-        <div>
+       
+        <div title="Строка текста">
 
         </div>
-        
+
+        <input type="button" value="Кнопка">
+        <p> <a href="icon.png" target="_blank">Ссылка</a>
+        </p>
+        <ol>
+            <li value="2">
+        <ol>
+            <li>Настоящий трудовой договор заключён на один год и вступает в силу со дня подписания сторонами.</li>
+            <li>РАБОТНИКУ устанавливается испытательный срок продолжительностью шесть месяцев.</li>
+        </ol>
+        </li>
+        </ol>
     </body>
 </html>
